# openDCM

./: .gitignore  README.md  docker-compose.yml  liquibase.properties  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-dcm.yaml  deploy-tf.yaml
dotfiles/: install-terraform.sh
liquibase-postgres-db/: db-changelog-main.xml
liquibase-postgres-db/changelog/: change_log_main.xml
liquibase-postgres-db/changelog/sql/: 001_create_schema_app.sql  002_create_table_example.sql  003_insert_table_example.sql
liquibase-postgres-db/changelogs/: db-changelog-master.xml
liquibase-postgres-db/changelogs/sql/: 001-initial-schema.sql
scripts/: run-liquibase.sh  start_migration.sh
src/: logger.py  start_migration.py
tests/: liquibase.properties  liquibase_testing.py  logger.py  test_change_log_main.py  test_migration_run.py
